crates/crucible-tui/src/asked/snapshots/crucible_tui__asked__tests__the_whole_panel_on_an_answer_with_nothing_to_show.snap
---
source: crates/crucible-tui/src/asked/tests.rs
expression: "dump(&panel.within(80, 40, Glyphs::Unicode).0, 80)"
---
<Accent>╭──────────────────────────────────────────────────────────────────────────────╮</>
<Accent>│</>  <Strong>Questions for you</>                                                           <Accent>│</>
<Accent>│</>                                                                              <Accent>│</>
<Accent>│</>  <Accent> </> <DoneMark>✓</> <Quiet>Language</>   <Accent> </> <Quiet>□</> <Quiet>Support</>   <Accent>›</> <Quiet>□</> <Strong>Status line</>   <Accent> </> <Quiet>Review</>                     <Accent>│</>
<Accent>│</>                                                                              <Accent>│</>
<Accent>│</>  You have no status line. Which one shall I set up here?                     <Accent>│</>
<Accent>│</>                                                                              <Accent>│</>
<Accent>│</>  <Accent> </> 1. Compact                                                                <Accent>│</>
<Accent>│</>  <Accent> </> 2. With the workspace and the spend                                       <Accent>│</>
<Accent>│</>  <Accent>›</><Strong> 3. </><Strong>Nothing at all</>                                                         <Accent>│</>
<Accent>│</>                                                                              <Accent>│</>
<Accent>│</>    <Quiet>┌────────────────────────────────────────────────────┐</>                    <Accent>│</>
<Accent>│</>    <Quiet>│</> <Quiet>nothing to show for this one</>                       <Quiet>│</>                    <Accent>│</>
<Accent>│</>    <Quiet>│</>                                                    <Quiet>│</>                    <Accent>│</>
<Accent>│</>    <Quiet>│</>                                                    <Quiet>│</>                    <Accent>│</>
<Accent>│</>    <Quiet>└────────────────────────────────────────────────────┘</>                    <Accent>│</>
<Accent>│</>                                                                              <Accent>│</>
<Accent>│</>  <Quiet>──────────────────────────────────────────────────────────────────────────</>  <Accent>│</>
<Accent>│</>    4. Say it in the prompt instead                                           <Accent>│</>
<Accent>╰──────────────────────────────────────────────────────────────────────────────╯</>
  <Quiet>esc to cancel · ←→ between questions · n for a note</>
