crates/crucible-tui/src/asked/snapshots/crucible_tui__asked__tests__the_whole_panel_with_an_answer_being_written.snap
---
source: crates/crucible-tui/src/asked/tests.rs
expression: "dump(&panel.within(80, 40, Glyphs::Unicode).0, 80)"
---
<Accent>╭──────────────────────────────────────────────────────────────────────────────╮</>
<Accent>│</>  <Strong>Questions for you</>                                                           <Accent>│</>
<Accent>│</>                                                                              <Accent>│</>
<Accent>│</>  <Accent>›</> <DoneMark>✓</> <Strong>Language</>   <Accent> </> <Quiet>□</> <Quiet>Support</>   <Accent> </> <Quiet>□</> <Quiet>Status line</>   <Accent> </> <Quiet>Review</>                     <Accent>│</>
<Accent>│</>                                                                              <Accent>│</>
<Accent>│</>  Which language should the examples be written in?                           <Accent>│</>
<Accent>│</>                                                                              <Accent>│</>
<Accent>│</>  <Accent> </> 1. Rust                                                                   <Accent>│</>
<Accent>│</>       <Quiet>crucible's own implementation language</>                                 <Accent>│</>
<Accent>│</>  <Accent> </> 2. Python                                                                 <Accent>│</>
<Accent>│</>       <Quiet>the common scripting choice</>                                            <Accent>│</>
<Accent>│</>  <Accent>›</><Strong> 3. </>Zig                                                                    <Accent>│</>
<Accent>│</>                                                                              <Accent>│</>
<Accent>│</>  <Quiet>──────────────────────────────────────────────────────────────────────────</>  <Accent>│</>
<Accent>│</>    4. Say it in the prompt instead                                           <Accent>│</>
<Accent>╰──────────────────────────────────────────────────────────────────────────────╯</>
  <Quiet>esc to stop typing · enter to keep it</>
