crates/crucible-tui/src/asked/snapshots/crucible_tui__asked__tests__the_whole_panel_with_no_box_drawing_to_hand.snap
---
source: crates/crucible-tui/src/asked/tests.rs
expression: "dump(&asked(&answers, &stops).within(80, 30, Glyphs::Ascii).0, 80)"
---
<Accent>+------------------------------------------------------------------------------+</>
<Accent>|</>  <Strong>Questions for you</>                                                           <Accent>|</>
<Accent>|</>                                                                              <Accent>|</>
<Accent>|</>  <Accent>></> <DoneMark>x</> <Strong>Language</>   <Accent> </> <Quiet>-</> <Quiet>Support</>   <Accent> </> <Quiet>-</> <Quiet>Status line</>   <Accent> </> <Quiet>Review</>                     <Accent>|</>
<Accent>|</>                                                                              <Accent>|</>
<Accent>|</>  Which language should the examples be written in?                           <Accent>|</>
<Accent>|</>                                                                              <Accent>|</>
<Accent>|</>  <Accent>></><Strong> 1. </><Strong>Rust</>                                                                   <Accent>|</>
<Accent>|</>       <Quiet>crucible's own implementation language</>                                 <Accent>|</>
<Accent>|</>  <Accent> </> 2. Python                                                                 <Accent>|</>
<Accent>|</>       <Quiet>the common scripting choice</>                                            <Accent>|</>
<Accent>|</>  <Accent> </> 3. Something else                                                         <Accent>|</>
<Accent>|</>                                                                              <Accent>|</>
<Accent>|</>  <Quiet>--------------------------------------------------------------------------</>  <Accent>|</>
<Accent>|</>    4. Say it in the prompt instead                                           <Accent>|</>
<Accent>+------------------------------------------------------------------------------+</>
  <Quiet>esc to cancel · ←→ between questions · n for a note</>
